kitten/reported_bugs/rust/rust-78174/stderr.txt
error[E0658]: non-builtin inner attributes are unstable

 --> mutant.rs:1:1

  |

1 | # ! [ lazy_normalization_consts ( lazy_normalization_consts ) ]

  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  |

  = note: see issue #54726 <https://github.com/rust-lang/rust/issues/54726> for more information

  = help: add `#![feature(custom_inner_attributes)]` to the crate attributes to enable



error: cannot find attribute `lazy_normalization_consts` in this scope

 --> mutant.rs:1:7

  |

1 | # ! [ lazy_normalization_consts ( lazy_normalization_consts ) ]

  |       ^^^^^^^^^^^^^^^^^^^^^^^^^



error: internal compiler error: compiler/rustc_mir/src/borrow_check/universal_regions.rs:768:36: cannot convert `ReEarlyBound(0, 'a)` to a region vid



thread 'rustc' panicked at 'Box<Any>', compiler/rustc_errors/src/lib.rs:945:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.49.0-nightly (8dae8cdcc 2020-10-12) running on x86_64-unknown-linux-gnu



note: compiler flags: -C debuginfo=2 -C opt-level=1 -C target-cpu=skylake --crate-type staticlib



error: aborting due to 3 previous errors



For more information about this error, try `rustc --explain E0658`.

